[#103] Change home pgae list spacing from fixed height to bottom-margin so it doesn't break on iphone

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -270,9 +270,8 @@ div#video {
 }
 
 .home ol li {
-  height: 4em;
   padding: 0;
-  margin: 0;
+  margin: 0 0 2em;
 
   list-style-type: none;
 
@@ -288,7 +287,7 @@ div#video {
   margin-right: 20px;
 
   font-weight: bold;
-  font-size: 153.9%;
+  font-size: 143%;
   color: #555;
 }
 
